--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
                   <label for="invite-message">Include a message about why you are sending this invitation:</label>
                   <textarea id="invite-message invite-message-size" class="form-control"></textarea>
                 </div>
-                <div id="invite-addtoteam-container no-display">
+                <div id="invite-addtoteam-container" style="display: none"">
                   <div class="checkbox form-checkbox">
                     <label>
                       <input name="add-to-team" type="checkbox"> Add user to system team
