--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -28,9 +28,9 @@ Remove contextbar from top of page
 % block body-wide %
 {% block body %}
 
-<div style="margin-top: 30px">
+<div class="portfolio-top">
   <div class="container">
-    <div style="float: right; margin: 0 0.5em 0em 5em;">
+    <div class="portfolio-main">
       <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#"" class=" btn
         btn-success">Start a project</a>
       {% if can_invite_to_portfolio %}
@@ -40,7 +40,7 @@ Remove contextbar from top of page
     </div>
 
     <h2 class="">{{ portfolio.title }}</h2>
-    <small style="color: #888;">Portfolio ID: {{ portfolio.id }}</small>
+    <small class="portfolio-small">Portfolio ID: {{ portfolio.id }}</small>
 
     {% if projects|length > 0 %}
     <p>This portfolio has {{ projects|length }} project{{ projects|pluralize }}</p>
@@ -57,7 +57,7 @@ Remove contextbar from top of page
     {% endif %}
 
       {% for project in projects %}
-      <div class="row" style="border-top: 1px solid #aaa;padding: 8px 0px 8px 0px;">
+      <div class="row portfolio-row">
 
         <div class="col-sm-1">
           {% if project.root_task.get_app_icon_url %}
@@ -70,7 +70,7 @@ Remove contextbar from top of page
         </div>
 
         <div class="col-xs-10 col-md-4">
-          <a href="{{project.get_absolute_url}}" style="color: black;">{{project.title}}</a>
+          <a href="{{project.get_absolute_url}}" class="portfolio-project-link">{{project.title}}</a>
         </div>
 
         <div class="col-xs-6 col-sm-1">{{project.id}}</div>
@@ -109,7 +109,7 @@ Remove contextbar from top of page
 
       {% if projects|length < 2 %}
       <div class="container">
-        <div class="row" style="margin-top: 60px;">
+        <div class="row portfolio-project-top">
           <div class="col-md-2"></div>
           <div class="col-md-5">
             <h2>A portfolio is a collection of projects.</h2>
@@ -119,7 +119,7 @@ Remove contextbar from top of page
             <p>The owners of the portfolio can manage portfolio members.</p>
           </div>
           <div class="col-md-3">
-            <div class="glyphicon glyphicon-folder-open" style="font-size: 8em; color: rgb(160, 210, 160);"></div>
+            <div class="glyphicon glyphicon-folder-open portfolio-glyphicons"></div>
           </div>
           <div class="col-md-2"></div>
         </div>
@@ -128,7 +128,7 @@ Remove contextbar from top of page
 
       {% if display_users_with_perms %}
       <div id="portfolio-members" class="container">
-        <div class="row" style="margin-top: 60px;">
+        <div class="row portfolio-project-top">
           <p id="portfolio-members"></p>
           <p> <b>Users With Access:</b></p>
           {% for user in users_with_perms %}
@@ -146,7 +146,7 @@ Remove contextbar from top of page
                 <input type="submit" value="Remove Ownership" class="btn btn-sm btn-danger" />
             </form>
             {%endif%}
-          </p>
+        </p>
           {% elif can_invite_to_portfolio %}
           <form id="{{user.name}}_remove_permissions" name="assign_owner_permissions" method="post" action="{% url 'update_permissions' %}" class="inline">
             {% csrf_token %}
