--- a/templates/portfolios/portfolios_table.html
+++ b/templates/portfolios/portfolios_table.html
@@ -14,12 +14,12 @@
 {% endif %}
 
   {% for portfolio in portfolios %}
-  <div class="row" style="border-top: 1px solid #aaa;padding: 8px 0px 8px 0px;">
+  <div class="row portfolio-row">
 
     <div class="col-xs-10 col-md-5">
       <div>
         <span class="glyphicon glyphicon-folder-close"></span>&nbsp;&nbsp;&nbsp;
-        <a href="/portfolios/{{portfolio.id}}/projects" id="portfolio_{{portfolio.title}}" style="color: black;">{{portfolio.title}}</a>
+        <a href="/portfolios/{{portfolio.id}}/projects" id="portfolio_{{portfolio.title}}" class="portfolio-project-link">{{portfolio.title}}</a>
       </div>
     </div>
 
@@ -35,7 +35,7 @@
     {% endif %}
     <div class="col-md-2">&nbsp;</div>
 
-    <div class="col-xs-12 col-md-2" style="text-align: left;">
+    <div class="col-xs-12 col-md-2 left-text">
         {{portfolio.created|naturaltime}}</div>
   </div>
   {% endfor %}
