--- a/templates/components/element_detail_tabs.html
+++ b/templates/components/element_detail_tabs.html
@@ -95,7 +95,7 @@
       <!-- Page Title-->
       <div style="float: left;">
           <h2 class="control-heading" style="">
-            <a href="{{ project.get_absolute_url }}" style="color: black;">{{ system.root_element.name }}</a> &gt; <a href="/systems/{{system.id}}/components/selected" style="color: black;">Selected Components</a>
+            <a href="/controls/components" style="color: black;">Component Library</a> &gt; <a href="/systems/{{system.id}}/components/selected" style="color: black;">Component Detail</a>
           </h2>
       </div>
 
@@ -130,9 +130,14 @@
 
       <!-- Tab panel: component -->
       <div role="tabpanel" class="tab-pane active" id="component">
-        <div>
-          <h3>Description</h3>
-          {{ element.description }}
+        <div class="row">
+          <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
+            <h3>Description</h3>
+            {{ element.description }}
+          </div>
+          <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div><h3><a id="copy_component" class="btn btn-sm btn-success" href="/controls/components/{{ element.id }}/_copy" role="button" style="color: white;">Copy component</a></h3></div>
+          </div>
         </div>
         <div>
           <h3>{{ impl_smts|length }} Implementation Statement{{ impl_smts|length|pluralize }}</h3>
