--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -79,7 +79,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static "js/select2.min.js" %}"></script>
-<link href="{% static "css/select2.min.css" %}" rel="stylesheet" />
+<script src="{% static "vendor/js/select2.min.js" %}"></script>
+<link href="{% static "vendor/css/select2.min.css" %}" rel="stylesheet" />
 
 {% endblock %}
